Do the "last" push

--- a/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/body-contract/components/contract-table/contract-table.component.html
@@ -49,6 +49,7 @@
           >
             <app-table-state-summarizer
               (currentCookedContractChange)="summarizingContract = $event; summarizingContract.displayDetails = true"
+              (displayStateChange)="displayTableState = $event"
             ></app-table-state-summarizer>
           </amber-modal>
           <app-contract-details
